@@ -4962,7 +4962,8 @@ SCIP_DECL_EXPRGRAPHNODEREFORM(exprgraphnodeReformAbspower)
       if( exponent <= 1.0 )
          return SCIP_OKAY;
 
-      assert(SCIPexprgraphGetNodeBounds(SCIPexprgraphGetNodeChildren(node)[0]).inf >= 0.0);
+      child = SCIPexprgraphGetNodeChildren(node)[0];
+      assert(SCIPexprgraphGetNodeBounds(child).inf >= 0.0);
       break;
 
    case SCIP_EXPR_INTPOWER:
@@ -4974,7 +4975,8 @@ SCIP_DECL_EXPRGRAPHNODEREFORM(exprgraphnodeReformAbspower)
       if( exponent <= 1.0 )
          return SCIP_OKAY;
 
-      childbounds = SCIPexprgraphGetNodeBounds(SCIPexprgraphGetNodeChildren(node)[0]);
+      child = SCIPexprgraphGetNodeChildren(node)[0];
+      childbounds = SCIPexprgraphGetNodeBounds(child);
       if( (int)exponent % 2 == 0 && childbounds.inf < 0.0 && childbounds.sup > 0.0 )
          return SCIP_OKAY;
 
@@ -4990,7 +4992,8 @@ SCIP_DECL_EXPRGRAPHNODEREFORM(exprgraphnodeReformAbspower)
       /* check if child has fixed sign */
       SCIP_INTERVAL childbounds;
 
-      childbounds = SCIPexprgraphGetNodeBounds(SCIPexprgraphGetNodeChildren(node)[0]);
+      child = SCIPexprgraphGetNodeChildren(node)[0];
+      childbounds = SCIPexprgraphGetNodeBounds(child);
       if( childbounds.inf < 0.0 && childbounds.sup > 0.0 )
          return SCIP_OKAY;
 
@@ -5007,6 +5010,7 @@ SCIP_DECL_EXPRGRAPHNODEREFORM(exprgraphnodeReformAbspower)
       exponent = SCIPexprgraphGetNodeSignPowerExponent(node);
       if( exponent <= 1.0 )
          return SCIP_OKAY;
+      child = SCIPexprgraphGetNodeChildren(node)[0];
       break;
 
    case SCIP_EXPR_POLYNOMIAL:
@@ -5014,52 +5018,136 @@ SCIP_DECL_EXPRGRAPHNODEREFORM(exprgraphnodeReformAbspower)
       SCIP_EXPRDATA_MONOMIAL* monomial;
       SCIP_INTERVAL childbounds;
 
-      /* check if only one univariate monomial with exponent > 1.0 */
-      if( SCIPexprgraphGetNodeNChildren(node) > 1 )
-         return SCIP_OKAY;
-      assert(SCIPexprgraphGetNodeNChildren(node) == 1);
-
+      /* check if only one monomial */
       if( SCIPexprgraphGetNodePolynomialNMonomials(node) > 1 )
          return SCIP_OKAY;
       assert(SCIPexprgraphGetNodePolynomialNMonomials(node) == 1); /* assume simplified, i.e., no constant polynomial */
 
       monomial = SCIPexprgraphGetNodePolynomialMonomials(node)[0];
-      assert(SCIPexprGetMonomialNFactors(monomial) == 1); /* since we have only one children and assume simplified */
 
-      exponent = SCIPexprGetMonomialExponents(monomial)[0];
-      if( exponent <= 1.0 )
+      assert(SCIPexprgraphGetNodeNChildren(node) >= 1);
+      if( SCIPexprgraphGetNodeNChildren(node) == 1 )
+      {
+         /* handle univariate case with exponent > 1.0 */
+         assert(SCIPexprGetMonomialNFactors(monomial) == 1); /* since we have only one child and assume simplified */
+
+         exponent = SCIPexprGetMonomialExponents(monomial)[0];
+         if( exponent <= 1.0 )
+            return SCIP_OKAY;
+
+         /* if exponent is even integer and child has mixed sign, then cannot do
+          * if exponent is even integer and child is always negative, then can do via multiplication by -1.0 */
+         child = SCIPexprgraphGetNodeChildren(node)[0];
+         childbounds = SCIPexprgraphGetNodeBounds(child);
+         if( SCIPisIntegral(scip, exponent) && ((int)SCIPround(scip, exponent) % 2 == 0) && childbounds.inf < 0.0 )
+         {
+            if( childbounds.sup > 0.0 )
+               return SCIP_OKAY;
+            signpowcoef = -1.0;
+         }
+
+         constant = SCIPexprgraphGetNodePolynomialConstant(node);
+         signpowcoef *= SCIPexprGetMonomialCoef(monomial);
+      }
+      else if( SCIPexprgraphGetNodeNChildren(node) == 2 )
+      {
+         /* look for abs(x)^p * x or x * abs(x)^p */
+         SCIP_EXPRGRAPHNODE* child1;
+         SCIP_EXPRGRAPHNODE* child2;
+
+         assert(SCIPexprGetMonomialNFactors(monomial) == 2); /* since we have two children and assume simplified */
+
+         child1 = SCIPexprgraphGetNodeChildren(node)[SCIPexprGetMonomialChildIndices(monomial)[0]];
+         child2 = SCIPexprgraphGetNodeChildren(node)[SCIPexprGetMonomialChildIndices(monomial)[1]];
+
+         if( SCIPexprgraphGetNodeOperator(child1) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(child1)[0] == child2 )
+         {
+            /* have abs(x)^p1 * x^p2; need p1 > 0, p2 = 1 */
+            if( SCIPexprGetMonomialExponents(monomial)[0] <= 0.0 || SCIPexprGetMonomialExponents(monomial)[1] != 1.0 )
+               return SCIP_OKAY;
+            exponent = 1.0 + SCIPexprGetMonomialExponents(monomial)[0];
+            child = child2;
+         }
+         else if( SCIPexprgraphGetNodeOperator(child2) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(child2)[0] == child1 )
+         {
+            /* have x^p1 * abs(x)^p2; need p1 = 1, p2 > 0 */
+            if( SCIPexprGetMonomialExponents(monomial)[0] != 1.0 || SCIPexprGetMonomialExponents(monomial)[1] <= 0.0 )
+               return SCIP_OKAY;
+            exponent = 1.0 + SCIPexprGetMonomialExponents(monomial)[1];
+            child = child1;
+         }
+         else
+            return SCIP_OKAY;
+
+         constant = SCIPexprgraphGetNodePolynomialConstant(node);
+         signpowcoef = SCIPexprGetMonomialCoef(monomial);
+      }
+      else
          return SCIP_OKAY;
 
-      /* if exponent is even integer and child has mixed sign, then cannot do
-       * if exponent is even integer and child is always negative, then can do via multiplication by -1.0 */
-      childbounds = SCIPexprgraphGetNodeBounds(SCIPexprgraphGetNodeChildren(node)[0]);
-      if( SCIPisIntegral(scip, exponent) && ((int)SCIPround(scip, exponent) % 2 == 0) && childbounds.inf < 0.0 )
+      break;
+   }
+
+   case SCIP_EXPR_MUL:
+   {
+      /* look for abs(x) * x and x * abs(x) */
+      SCIP_EXPRGRAPHNODE* child1;
+      SCIP_EXPRGRAPHNODE* child2;
+
+      child1 = SCIPexprgraphGetNodeChildren(node)[0];
+      child2 = SCIPexprgraphGetNodeChildren(node)[1];
+
+      if( SCIPexprgraphGetNodeNChildren(child1) == 1 && SCIPexprgraphGetNodeOperator(child1) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(child1)[0] == child2 )
       {
-         if( childbounds.sup > 0.0 )
-            return SCIP_OKAY;
-         signpowcoef = -1.0;
+         /* abs(x) * x */
+         exponent = 2.0;
+         child = child2;
+         break;
       }
 
-      constant = SCIPexprgraphGetNodePolynomialConstant(node);
-      signpowcoef *= SCIPexprGetMonomialCoef(monomial);
+      if( SCIPexprgraphGetNodeNChildren(child2) == 1 && SCIPexprgraphGetNodeOperator(child2) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(child2)[0] == child1 )
+      {
+         /* x * abs(x) */
+         exponent = 2.0;
+         child = child1;
+         break;
+      }
 
-      break;
+      /* the cases below should not happening, because node will be of polynomial type after simplifty */
+#ifdef SCIP_DISABLED_CODE
+      if( SCIPexprgraphGetNodeNChildren(child1) == 1 && (SCIPexprgraphGetNodeOperator(child1) == SCIP_EXPR_INTPOWER || SCIPexprgraphGetNodeOperator(child1) == SCIP_EXPR_REALPOWER) &&
+         SCIPexprgraphGetNodeOperator(SCIPexprgraphGetNodeChildren(child1)[0]) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(SCIPexprgraphGetNodeChildren(child1)[0])[0] == child2 )
+      {
+         /* abs(x)^p * x */
+         exponent = 1.0 + SCIPexprgraphGetNodeOperator(child1) == SCIP_EXPR_INTPOWER ? SCIPexprgraphGetNodeIntPowerExponent(child1) : SCIPexprgraphGetNodeRealPowerExponent(child1);
+         child = child2;
+         break;
+      }
+
+      if( SCIPexprgraphGetNodeNChildren(child2) == 1 && (SCIPexprgraphGetNodeOperator(child2) == SCIP_EXPR_INTPOWER || SCIPexprgraphGetNodeOperator(child2) == SCIP_EXPR_REALPOWER) &&
+         SCIPexprgraphGetNodeOperator(SCIPexprgraphGetNodeChildren(child2)[0]) == SCIP_EXPR_ABS && SCIPexprgraphGetNodeChildren(SCIPexprgraphGetNodeChildren(child2)[0])[0] == child1 )
+      {
+         /* x * abs(x)^p */
+         exponent = 1.0 + SCIPexprgraphGetNodeOperator(child2) == SCIP_EXPR_INTPOWER ? SCIPexprgraphGetNodeIntPowerExponent(child2) : SCIPexprgraphGetNodeRealPowerExponent(child2);
+         child = child1;
+         break;
+      }
+#endif
+      return SCIP_OKAY;
    }
 
    default:
       return SCIP_OKAY;
    }  /*lint !e788*/
-   assert(SCIPexprgraphGetNodeNChildren(node) == 1);
 
    if( SCIPexprgraphHasNodeNonlinearAncestor(node) )
       return SCIP_OKAY;
-   if( !SCIPexprgraphHasNodeSibling(node) )
+   if( SCIPexprgraphGetNodeNChildren(node) == 1 && !SCIPexprgraphHasNodeSibling(node) )  /* why did I require siblings??? */
       return SCIP_OKAY;
 
    SCIPdebugMsg(scip, "reformulate node %p via signpower\n", (void*)node);
 
    /* get x and its offset */
-   child = SCIPexprgraphGetNodeChildren(node)[0];
    if( SCIPexprgraphGetNodeOperator(child) == SCIP_EXPR_VARIDX )
    {
       x = (SCIP_VAR*)SCIPexprgraphGetNodeVar(exprgraph, child);
